--- a/Proyecto1/css/style2.css
+++ b/Proyecto1/css/style2.css
@@ -65,4 +65,10 @@
     #bloque-ads3{
         display: none;
     }
+    .container-fotos {
+        display: none;
+    }
+    article {
+        width: 100%;
+    }
 }
