--- a/Proyecto1/css/style.css
+++ b/Proyecto1/css/style.css
@@ -250,6 +250,22 @@ audio::-webkit-media-controls-panel {
     background-color: #6fff31;
 }
 
+h2:hover {
+    background-color: #6fff312e;
+}
+
+h2::after {
+    content: '.';
+}
+
+img:hover {
+    box-shadow: 0 0 20px #6fff31;
+}
+
+:focus {
+    box-shadow: 0 0 20px #000000;
+}
+
 /* .barra-song {
     display: flex;
     align-items: center;
