--- a/Proyecto2/css/admin.css
+++ b/Proyecto2/css/admin.css
@@ -37,3 +37,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
+
+.carousel-inner {
+  max-height: 29rem;
+}
