Subo contenido de los trabajos que he realizado en clases y de manera autonoma

--- a/SitioAngular/sitioAngular/src/app/redes/redes.component.html
+++ b/SitioAngular/sitioAngular/src/app/redes/redes.component.html
@@ -1,9 +1,9 @@
-<ul class="list-group list-group-horizontal justify-content-center mb-5">
- 	
+<ul class="list-group list-group-horizontal justify-content-center bg-opacity-10">
+
     <!-- *ngFor -->
-    <li class="list-group-item border-0" *ngFor="let red of redes">
-        <a href=" {{red.href}} " class="text-primary">
-            <img width="25" src="{{red.src}}" alt="{{red.alt}}">
+    <li class="list-group-item border-0 bg-transparent" *ngFor="let red of redes">
+        <a [href]="red.href " class="text-primary">
+            <img width="25" [src]="red.src" alt="{{red.alt}}" onerror="this.src='assets/images/imageNotAvailable.png'">
         </a>
     </li>
 
