Subo la parte grafica de mi proyecto 3

--- a/Proyecto3/src/app/login-texto/login-texto.component.html
+++ b/Proyecto3/src/app/login-texto/login-texto.component.html
@@ -1,10 +1,10 @@
 <!-- Texto inicio de sesion -->
 <div class="carousel-caption carousel-caption-top px-3">
-  <h6>{{sub_nombre_mainProd}}</h6>
-  <h4 class="fs-1">{{nombre_negocio}}</h4>
+  <h6 class="fs-6">{{sub_nombre_mainProd}}</h6>
+  <h3 class="fs-1">{{nombre_negocio}}</h3>
   <p>{{slogan}}</p>
 </div>
 <div class="carousel-caption carousel-caption-bottom">
-  <div class="btn btn-lg btn-warning">Inicio Sesión</div>
+  <div class="btn btn-lg btn-warning" routerLink="/inicio-view">Inicio Sesión</div>
 </div>
 <!-- ------------------------- -->
