--- a/ExpressNodeJS/app-servidor-prueba/views/partials/nav.ejs
+++ b/ExpressNodeJS/app-servidor-prueba/views/partials/nav.ejs
@@ -29,7 +29,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="/reports">
           <span data-feather="bar-chart-2" class="align-text-bottom"></span>
           Reports
         </a>
