Subo avances de mi proyecto 3, aplicacion servidor completa, TODO *completar las vistas usando la base de datos No relacional y Relacionar

--- a/Proyecto3/app-cliente-angular/src/app/inicio-view/inicio-view.component.css
+++ b/Proyecto3/app-cliente-angular/src/app/inicio-view/inicio-view.component.css
@@ -7,7 +7,16 @@
 }
 
 .card-img {
-  height: 125px;
-  width: 125px;
+  height: 115px;
   object-fit: cover;
+  object-position: center;
+}
+
+.img_carrusel {
+  max-height: 22vh;
+  object-fit: cover;
+}
+
+.none_card {
+  display: none;
 }
