--- a/Proyecto3/app-cliente-angular/src/app/navbar/navbar.component.html
+++ b/Proyecto3/app-cliente-angular/src/app/navbar/navbar.component.html
@@ -1,4 +1,7 @@
-<ul class="nav nav-pills p-3 my_bg_dark pt-4" id="pills-tab" role="tablist">
+<div class="container-fluid m-0 p-0 pt-4">
+  <img src="../../assets/images/logo_maru.png" class="img-fluid w-50 logo" alt="">
+</div>
+<ul class="nav nav-pills p-3 my_bg_dark" id="pills-tab" role="tablist">
   <li class="nav-item" role="presentation">
     <button
       class="nav-link {{ inHome }}"
