--- a/Proyecto3/app-cliente-angular/src/app/inicio-view/inicio-view.component.html
+++ b/Proyecto3/app-cliente-angular/src/app/inicio-view/inicio-view.component.html
@@ -5,15 +5,22 @@
   class="my_primary_color pt-3 container-fluid d-block text-center"
 >
   <mat-label>Seleccione una sección de productos</mat-label>
-  <mat-select class="my_primary_color w-75">
-    <mat-option value="option1">Tostadas</mat-option>
-    <mat-option value="option2">Batidos</mat-option>
-    <mat-option value="option3">Café</mat-option>
-    <mat-option value="option4" disabled>Jugos</mat-option>
+  <mat-select
+    class="my_primary_color w-75"
+    [(ngModel)]="seleccion"
+  >
+    <mat-option>Ninguno</mat-option>
+    <mat-option
+      *ngFor="let cat of categorias"
+      value="{{ cat.categoria_id }}"
+    >
+      {{cat.categoria_name}}
+    </mat-option>
+    <mat-option value="4" disabled>Jugos</mat-option>
   </mat-select>
 </mat-form-field>
 <!-- ------------------ -->
-
+<!-- <h1>{{seleccion}}</h1> -->
 <!-- Campo del carrusel -->
 <div
   id="carouselProducts"
@@ -21,53 +28,20 @@
   data-bs-ride="carousel"
 >
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="carousel-item" *ngFor="let cate of categorias" [ngClass]="cate.categoria_id == 1 ? 'active' : ''">
       <img
-        src="../../assets/images/img_toast.webp"
-        class="w-75 rounded-4"
+        src="{{cate.categoria_src_img}}"
+        href=""
+        class="w-75 rounded-4 img_carrusel"
         alt="..."
       />
       <div class="mt-3 position-relative text-start">
         <div class="w-75 position-absolute start-50 translate-middle-x">
-          <h2 class="m-0">Tostadas</h2>
-          <p class="m-0">Desde $0.75 hasta $1.25</p>
+          <h2 class="m-0">{{cate.categoria_name}}</h2>
+          <p class="m-0">Desde ${{cate.categoria_min_price}} hasta ${{cate.categoria_max_price}}</p>
           <div class="m-0 d-flex">
             <mat-icon class="m-0">star</mat-icon>
-            <p class="m-0 align-self-center">4.9 (1234 Reseñas)</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img
-        src="../../assets/images/img_milkshake_gruop.webp"
-        class="w-75 rounded-4"
-        alt="..."
-      />
-      <div class="mt-3 position-relative text-start">
-        <div class="w-75 position-absolute start-50 translate-middle-x">
-          <h2 class="m-0">Batidos</h2>
-          <p class="m-0">Desde $0.75 hasta $2.00</p>
-          <div class="m-0 d-flex">
-            <mat-icon class="m-0">star</mat-icon>
-            <p class="m-0 align-self-center">4.9 (890 Reseñas)</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img
-        src="../../assets/images/bg_login_coffe.webp"
-        class="w-75 rounded-4"
-        alt="..."
-      />
-      <div class="mt-3 position-relative text-start">
-        <div class="w-75 position-absolute start-50 translate-middle-x">
-          <h2 class="m-0">Cafe</h2>
-          <p class="m-0">Desde $0.50 hasta $1.00</p>
-          <div class="m-0 d-flex">
-            <mat-icon class="m-0">star</mat-icon>
-            <p class="m-0 align-self-center">4.9 (456 Reseñas)</p>
+            <p class="m-0 align-self-center">{{cate.categoria_prom_rate}} ({{cate.categoria_liked}} gustados)</p>
           </div>
         </div>
       </div>
@@ -95,34 +69,35 @@
 <!-- Campo de productos -->
 <mat-card
   class="mat-card w-75 p-0 pt-2 mb-3 container-fluid my_bg_dark"
-  *ngFor="let producto of productos"
+  *ngFor="let categ of categorias"
+  [ngClass]="categ.categoria_id == seleccion ? '' : 'none_card' "
 >
   <mat-card-title-group>
-    <mat-card-title>{{ producto.titulo }}</mat-card-title>
+    <mat-card-title>{{ categ.categoria_name }}</mat-card-title>
     <mat-card-subtitle class="my_bg_dark">{{
-      producto.subtitulo
+      categ.categoria_descript
     }}</mat-card-subtitle>
   </mat-card-title-group>
   <mat-card-content>
     <mat-card
       class="mat-card p-0 m-0 mb-3 container my_bg_dark"
-      *ngFor="let item of producto.items"
+      *ngFor="let producto of categ.productos"
     >
       <div class="row">
         <div class="col">
-          <img class="card-img" [src]="item.src" />
+          <img class="card-img" [src]="producto.producto_src_img" />
         </div>
         <div class="col">
           <mat-card-title-group>
-            <mat-card-title class="fs-5">{{ item.titulo }}</mat-card-title>
+            <mat-card-title class="fs-5">{{ producto.producto_name }}</mat-card-title>
           </mat-card-title-group>
           <mat-card-content>
             <div class="m-0 d-flex">
               <mat-icon class="m-0">star</mat-icon>
-              <p class="m-0 align-self-center">{{ item.puntaje }}</p>
+              <p class="m-0 align-self-center">{{ producto.producto_rate }}</p>
             </div>
-            <p class="m-0">Precio: ${{ item.precio }}</p>
-            <p class="m-0">{{ item.horario }}</p>
+            <p class="m-0">Precio: ${{ producto.producto_price }}</p>
+            <p class="m-0">{{ producto.producto_hora_start }} a {{ producto.producto_hora_end }}</p>
           </mat-card-content>
         </div>
       </div>
@@ -130,3 +105,11 @@
   </mat-card-content>
 </mat-card>
 <!-- ------------------ -->
+
+<!-- Campo condicional seleccione una categoria -->
+<div class="d-flex justify-content-center">
+  <div class="mt-4 alert alert-danger w-75" role="alert" *ngIf="(seleccion == 0 || seleccion == undefined)">
+    Para ver los productos debe seleccionar una categoría
+  </div>
+</div>
+<!-- ------------------------------------------ -->
