Subo avances de mi proyecto 3, autenticacion, login, registro en mi app con firebase

--- a/Proyecto3/app-cliente-angular/src/app/components/inicio-view/inicio-view.component.html
+++ b/Proyecto3/app-cliente-angular/src/app/components/inicio-view/inicio-view.component.html
@@ -5,16 +5,10 @@
   class="my_primary_color pt-3 container-fluid d-block text-center"
 >
   <mat-label>Seleccione una sección de productos</mat-label>
-  <mat-select
-    class="my_primary_color w-75"
-    [(ngModel)]="seleccion"
-  >
+  <mat-select class="my_primary_color w-75" [(ngModel)]="seleccion">
     <mat-option>Ninguno</mat-option>
-    <mat-option
-      *ngFor="let cat of categorias"
-      value="{{ cat.categoria_id }}"
-    >
-      {{cat.categoria_name}}
+    <mat-option *ngFor="let cat of categorias" value="{{ cat.categoria_id }}">
+      {{ cat.categoria_name }}
     </mat-option>
     <mat-option value="4" disabled>Jugos</mat-option>
   </mat-select>
@@ -28,20 +22,34 @@
   data-bs-ride="carousel"
 >
   <div class="carousel-inner">
-    <div class="carousel-item" *ngFor="let cate of categorias" [ngClass]="cate.categoria_id == 1 ? 'active' : ''">
+    <div
+      class="carousel-item"
+      *ngFor="let cate of categorias"
+      [ngClass]="cate.categoria_id == 1 ? 'active' : ''"
+      [routerLink]="['/ordenes', cate.categoria_name]"
+    >
       <img
-        src="{{cate.categoria_src_img}}"
+        src="{{ cate.categoria_src_img }}"
         href=""
         class="w-75 rounded-4 img_carrusel"
         alt="..."
       />
       <div class="mt-3 position-relative text-start">
         <div class="w-75 position-absolute start-50 translate-middle-x">
-          <h2 class="m-0">{{cate.categoria_name}}</h2>
-          <p class="m-0">Desde ${{cate.categoria_min_price}} hasta ${{cate.categoria_max_price}}</p>
+          <h2 class="m-0">{{ cate.categoria_name }}</h2>
+          <p class="m-0">
+            Desde ${{ cate.categoria_min_price }} hasta ${{
+              cate.categoria_max_price
+            }}
+          </p>
           <div class="m-0 d-flex">
             <mat-icon class="m-0">star</mat-icon>
-            <p class="m-0 align-self-center">{{cate.categoria_prom_rate}} ({{cate.categoria_liked}} gustados)</p>
+            <p class="m-0 align-self-center">
+              {{ cate.categoria_prom_rate }} ({{
+                cate.categoria_liked
+              }}
+              gustados)
+            </p>
           </div>
         </div>
       </div>
@@ -70,7 +78,7 @@
 <mat-card
   class="mat-card w-75 p-0 pt-2 mb-3 container-fluid my_bg_dark"
   *ngFor="let categ of categorias"
-  [ngClass]="categ.categoria_id == seleccion ? '' : 'none_card' "
+  [ngClass]="categ.categoria_id == seleccion ? '' : 'none_card'"
 >
   <mat-card-title-group>
     <mat-card-title>{{ categ.categoria_name }}</mat-card-title>
@@ -83,13 +91,16 @@
       class="mat-card p-0 m-0 mb-3 container my_bg_dark"
       *ngFor="let producto of categ.productos"
     >
+    <div [routerLink]="['/ordenes', categ.categoria_name, producto.producto_id]">
       <div class="row">
         <div class="col">
           <img class="card-img" [src]="producto.producto_src_img" />
         </div>
         <div class="col">
           <mat-card-title-group>
-            <mat-card-title class="fs-5">{{ producto.producto_name }}</mat-card-title>
+            <mat-card-title class="fs-5">{{
+              producto.producto_name
+            }}</mat-card-title>
           </mat-card-title-group>
           <mat-card-content>
             <div class="m-0 d-flex">
@@ -97,10 +108,15 @@
               <p class="m-0 align-self-center">{{ producto.producto_rate }}</p>
             </div>
             <p class="m-0">Precio: ${{ producto.producto_price }}</p>
-            <p class="m-0">{{ producto.producto_hora_start }} a {{ producto.producto_hora_end }}</p>
+            <p class="m-0">
+              {{ producto.producto_hora_start }} a
+              {{ producto.producto_hora_end }}
+            </p>
           </mat-card-content>
         </div>
       </div>
+    </div>
+
     </mat-card>
   </mat-card-content>
 </mat-card>
@@ -108,8 +124,14 @@
 
 <!-- Campo condicional seleccione una categoria -->
 <div class="d-flex justify-content-center">
-  <div class="mt-4 alert alert-danger w-75" role="alert" *ngIf="(seleccion == 0 || seleccion == undefined)">
+  <div
+    class="mt-4 alert alert-danger w-75"
+    role="alert"
+    *ngIf="seleccion == 0 || seleccion == undefined"
+  >
+  <h2 class="fs-4 text-center">
     Para ver los productos debe seleccionar una categoría
+  </h2>
   </div>
 </div>
 <!-- ------------------------------------------ -->
