--- a/Proyecto3/app-cliente-angular/src/app/components/ordenes-view/ordenes-view.component.css
+++ b/Proyecto3/app-cliente-angular/src/app/components/ordenes-view/ordenes-view.component.css
@@ -9,3 +9,10 @@ div {
   background-color: #ffc61a !important;
   color: #322a28 !important;
 }
+
+.imagen {
+  height: 35vh;
+  width: 100vw;
+  object-fit: cover;
+  object-position: bottom;
+}
