--- a/Proyecto3/app-cliente-angular/src/styles.css
+++ b/Proyecto3/app-cliente-angular/src/styles.css
@@ -50,3 +50,6 @@ body {
   background-color: #ffd964;
   width: auto;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
