--- a/Proyecto3/app-cliente-angular/src/app/components/navbar/navbar.component.html
+++ b/Proyecto3/app-cliente-angular/src/app/components/navbar/navbar.component.html
@@ -35,7 +35,7 @@
   <li class="nav-item example-spacer"></li>
   <li class="nav-item" role="presentation">
     <button
-      class="nav-link"
+      class="nav-link {{ inInfo }}"
       id="pills-disabled-tab"
       data-bs-toggle="pill"
       data-bs-target="#pills-disabled"
@@ -43,9 +43,9 @@
       role="tab"
       aria-controls="pills-disabled"
       aria-selected="false"
-      disabled
+      routerLink="/info"
     >
-      Disabled
+      Más Info
     </button>
   </li>
 
